--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Temperature Calculator</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="Css/style.css">
 </head>
 <body>
   <div class="container">
@@ -28,6 +28,6 @@
     <h3><p id="or">or</p></h3>
     <p id="equation02">S(°C) * (1.8) + 32 = S(°F)</p>
  </div>
-  <script src="js/script.js"></script>
+  <script src="Js/script.js"></script>
 </body>
 </html>
